@startuml PrismaModel
class User {
  String: id
  String?: name
  String?: image
  String?: hashedPassword
  String?: email
  DateTime?: emailVerified
  DateTime: createdAt
  DateTime: updatedAt
  String[]: faviriteIds
  + create()
  + update()
  + delete()
  + find()
}

class Account {
  String: id
  String: userId
  String: type
  String: provider
  String: providerAccountId
  String?: refresh_token
  String?: access_token
  String?: token_type
  String?: scope
  String?: id_token
  String?: session_state
  Int?: expires_at
}

class Listing {
  String: id
  String: userId
  String: title
  String: description
  String: imageSrc
  String: category
  String: locationValue
  Int: roomCount
  Int: bathroomCount
  Int: guestCount
  Int: price
  DateTime: createdAt  
}

class Reservation {
  String: id
  String: userId
  String: listingId
  Int: totalPrice
  DateTime: startDate
  DateTime: endDate
  DateTime: createdAt  
}

User "1" -- "0..*" Account : accounts <
User "1" -- "0..*" Listing : listings <
User "1" -- "0..*" Reservation : reservations <

Account ..|> User : userId

Listing ..|> User : userId

Reservation ..|> User : userId

Listing "1" -- "0..*" Reservation : reservations <

Reservation ..|> Listing : listingId

@enduml
